Fixed dark mode and added map locations

--- a/styles.css
+++ b/styles.css
@@ -32,7 +32,7 @@ body {
 h1 {
     color: rgb(15, 15, 85);
     font-size: 32px;
-    font-family:'Times New Roman', Times, serif
+    font-family: Tahoma, sans-serif;
    
 }
 
@@ -40,7 +40,7 @@ h1 {
 h2 {
     color: rgb(15, 15, 85);
     font-size: 28px;
-    font-family:'Times New Roman', Times, serif
+    font-family: Tahoma, sans-serif;
    
 }
 
@@ -48,7 +48,7 @@ h2 {
 h3 {
     color: rgb(41, 54, 139);
     font-size: 24px;
-    font-family:'Times New Roman', Times, serif
+    font-family: Tahoma, sans-serif;
    
 }
 
@@ -56,7 +56,7 @@ h3 {
 h4 {
     color: rgb(61, 61, 125);
     font-size: 20px;
-    font-family:'Times New Roman', Times, serif
+    font-family: Tahoma, sans-serif;
    
 }
 
@@ -64,7 +64,7 @@ h4 {
 p {
     color: rgb(9, 9, 47);
     font-size: 16px;
-    font-family:'Times New Roman', Times, serif
+    font-family: Tahoma, sans-serif;
    
 }
 
@@ -218,6 +218,10 @@ img {
 .dark-mode h3,
 .dark-mode h4 {
     color: var(--accent-color-light);
+}
+
+.dark-mode p {
+    color: var(--text-color-dark-mode);
 }
 
 .dark-mode a {
